# omni-parse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SHA256.txt  start.bat
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-desktop.yml  ci.yml
backend/: .env.example  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/models/: schemas.py
backend/app/services/: convert_service.py  extract_service.py  fetch_service.py  orchestrator.py
backend/tests/: test_api.py
crates/omniparse-core/: Cargo.toml  README.md
crates/omniparse-core/src/: browser.rs  browser_fetch.rs  browser_pool.rs  config.rs  convert.rs  error.rs  extract.rs  fetch.rs  images.rs  lib.rs  media.rs  models.rs  orchestrator.rs  progress.rs  security.rs  server.rs  settings.rs
docs/: TRUST.md  index.html  vision.md
docs/architecture/: codebase-map.md  core-logic.md  data-flow.md  database.md  dependencies.md  modules.md  overview.md
docs/assets/: README.md
docs/css/: landing.css
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: advanced-options.tsx  api-status.tsx  arrangements-panel.tsx  extraction-history.tsx  extraction-progress.tsx  extraction-stats-panel.tsx  extractor-workspace.tsx  markdown-preview.tsx  preset-selector.tsx  preview-panel.tsx  (+2 more)
scripts/: build-desktop.ps1  build-desktop.sh  clean.ps1  generate-sha256.ps1  generate-sha256.sh  run-backend.bat  run-frontend.bat
(+11 files in other folders)
