[package]
name = "omniparse-core"
description = "OmniParse extraction API — fetch, parse, convert, and image resolution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "omniparse_core"
path = "src/lib.rs"

[[bin]]
name = "omniparse-server"
path = "src/bin/server.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
scraper = "0.22"
readability = "0.3"
html2md = "0.2"
url = "2"
regex = "1"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
printpdf = "0.7"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
